tests/semantic/fact_number/fact_number.err
Error: Relation expects value of type Node but got argument of type number constant in file fact_number.dl at line 8
F(1000,"0002").
--^-------------
1 errors generated, evaluation aborted
